# faiss

./: CMakeLists.txt  benchmark_neurodistance_v4.py  memory.py
benchs/: bench_neurodistance.py  bench_neurodistance_v2.py  bench_neurodistance_v3.py  neurodistance_results.csv
docs/pre-dev/neuro-distance-strategies/: howto_python.md  prd.md  research.md  tasks.md  trd.md  validation_final.md  validation_phase1.md  validation_phase2.md  validation_phase3.md  validation_phase4.md
docs/pre-dev/neurodistance-v3/: brd.md  prd.md  research.md  tasks.md  trd.md
faiss/: CMakeLists.txt  IndexNeuroAdaptiveMetric.cpp  IndexNeuroAdaptiveMetric.h  IndexNeuroAdaptiveProbe.cpp  IndexNeuroAdaptiveProbe.h  IndexNeuroAdaptiveQuantization.cpp  IndexNeuroAdaptiveQuantization.h  IndexNeuroAdaptiveScale.cpp  IndexNeuroAdaptiveScale.h  IndexNeuroAdaptiveZones.cpp  IndexNeuroAdaptiveZones.h  IndexNeuroAnchor.cpp  IndexNeuroAnchor.h  IndexNeuroBatchedQueries.cpp  IndexNeuroBatchedQueries.h  IndexNeuroCache.cpp  IndexNeuroCache.h  IndexNeuroCentroidBounds.cpp  IndexNeuroCentroidBounds.h  IndexNeuroCoarseToFine.cpp  IndexNeuroCoarseToFine.h  IndexNeuroColumnHash.cpp  IndexNeuroColumnHash.h  IndexNeuroCompressedDisk.cpp  IndexNeuroCompressedDisk.h  IndexNeuroContextualWeighted.cpp  IndexNeuroContextualWeighted.h  IndexNeuroCrossModal.cpp  IndexNeuroCrossModal.h  IndexNeuroDiskANN.cpp  IndexNeuroDiskANN.h  IndexNeuroDropoutEnsemble.cpp  IndexNeuroDropoutEnsemble.h  IndexNeuroDynamicPartitions.cpp  IndexNeuroDynamicPartitions.h  IndexNeuroEarlyTermination.cpp  IndexNeuroEarlyTermination.h  IndexNeuroElimination.cpp  IndexNeuroElimination.h  IndexNeuroEnsembleVoting.cpp  (+76 more)
faiss/impl/: NeuroDistance.cpp  NeuroDistance.h
faiss/python/: swigfaiss.swig
faiss/utils/: extra_distances-inl.h
neurodistance_pkg/: README.md  pyproject.toml
neurodistance_pkg/src/neurodistance/: __init__.py  indexes.py
neurodistance_pkg/src/neurodistance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neurodistance_standalone/: MANIFEST.in  README.md  pyproject.toml
neurodistance_standalone/src/neurodistance/: __init__.py  indexes.py  memory.py  swigfaiss.py
neurodistance_standalone/src/neurodistance_standalone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: CMakeLists.txt  test_neurodistance.cpp
