[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodistance"
version = "0.5.0"
authors = [
    { name = "NeuroDistance Team", email = "neurodistance@example.com" }
]
description = "Bio-inspired vector search strategies for FAISS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["faiss", "vector-search", "nearest-neighbor", "bio-inspired", "machine-learning"]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
sklearn = [
    "scikit-learn>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/neurodistance/neurodistance"
"Bug Tracker" = "https://github.com/neurodistance/neurodistance/issues"
"Documentation" = "https://github.com/neurodistance/neurodistance#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.so", "*.pyd", "*.dll"]
