[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodistance-standalone"
version = "0.5.0"
authors = [
    { name = "NeuroDistance Team", email = "neurodistance@example.com" }
]
description = "Bio-inspired vector search strategies - standalone with bundled FAISS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["faiss", "vector-search", "nearest-neighbor", "bio-inspired", "machine-learning"]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
sklearn = [
    "scikit-learn>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/neurodistance/neurodistance"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neurodistance = ["libs/*.so", "*.py"]
